# GR00T-WholeBodyControl

./: .gitignore  .gitmodules  README.md  VIDEO2POSE.md  download_from_hf.py  run_sonic_sim.sh
docs/source/: index.rst
docs/source/getting_started/: download_models.md  quickstart.md
docs/source/tutorials/: data_collection.md  isaac_teleop_publisher_setup.md  vla_inference.md  vla_workflow.md  vr_wholebody_teleop.md
gear_sonic/scripts/: process_dataset.py
gear_sonic/utils/mujoco_sim/: base_sim.py
gear_sonic_deploy/: deploy.sh  visualize_motion.py
gear_sonic_deploy/reference/: convert_g1_retargeting_csv_to_sonic.py
gear_sonic_deploy/reference/backup/6.4/: body_ang_vel.csv  body_lin_vel.csv  body_pos.csv  body_quat.csv  info.txt  joint_pos.csv  joint_vel.csv  metadata.txt
gear_sonic_deploy/reference/backup/6.5love_bird/: body_ang_vel.csv  body_lin_vel.csv  body_pos.csv  body_quat.csv  info.txt  joint_pos.csv  joint_vel.csv  metadata.txt
gear_sonic_deploy/reference/backup/6.5love_bird_pro/: body_ang_vel.csv  body_lin_vel.csv  body_pos.csv  body_quat.csv  info.txt  joint_pos.csv  joint_vel.csv  metadata.txt
gear_sonic_deploy/reference/example/: .gitignore  .motion_aliases.json  .playback_settings.json  .sonic_status.json
gear_sonic_deploy/reference/example/Take_007_036_Skeleton6/: body_lin_vel.csv  body_pos.csv  info.txt
gear_sonic_deploy/reference/example/Take_007_053_Skeleton7/: body_ang_vel.csv  body_lin_vel.csv  body_pos.csv  body_quat.csv  info.txt  joint_pos.csv  joint_vel.csv  metadata.txt
gear_sonic_deploy/reference/example/Take_007_054_Skeleton7/: body_ang_vel.csv  body_lin_vel.csv  body_pos.csv  body_quat.csv  info.txt  joint_pos.csv  joint_vel.csv  metadata.txt
gear_sonic_deploy/reference/example/Take_007_055_Skeleton7/: body_ang_vel.csv  body_lin_vel.csv  body_pos.csv  body_quat.csv  info.txt  joint_pos.csv  joint_vel.csv  metadata.txt
gear_sonic_deploy/reference/example/Take_007_056_Skeleton7/: body_ang_vel.csv  body_lin_vel.csv  body_pos.csv  body_quat.csv  info.txt  joint_pos.csv  joint_vel.csv  metadata.txt
gear_sonic_deploy/reference/example/Take_007_057_Skeleton7/: body_ang_vel.csv  body_lin_vel.csv  body_pos.csv  body_quat.csv  info.txt  joint_pos.csv  joint_vel.csv  metadata.txt
gear_sonic_deploy/reference/example/Take_007_058_Skeleton7/: body_ang_vel.csv  body_lin_vel.csv  body_pos.csv  body_quat.csv  info.txt  joint_pos.csv  joint_vel.csv  metadata.txt
gear_sonic_deploy/reference/example/Take_007_059_Skeleton7/: body_ang_vel.csv  body_lin_vel.csv  body_pos.csv  body_quat.csv  info.txt  joint_pos.csv  joint_vel.csv  metadata.txt
gear_sonic_deploy/reference/example/Take_007_060_Skeleton7/: body_ang_vel.csv  body_lin_vel.csv  body_pos.csv  body_quat.csv  info.txt  joint_pos.csv  joint_vel.csv  metadata.txt
gear_sonic_deploy/reference/example/dance_in_da_party_001__A464/: body_ang_vel.csv  body_lin_vel.csv  body_pos.csv  body_quat.csv  joint_pos.csv  joint_vel.csv
gear_sonic_deploy/reference/example/dance_in_da_party_001__A464_M/: body_ang_vel.csv  body_lin_vel.csv  body_pos.csv  body_quat.csv  joint_pos.csv  joint_vel.csv
gear_sonic_deploy/reference/example/forward_lunge_R_001__A359_M/: body_ang_vel.csv  body_lin_vel.csv  body_pos.csv  body_quat.csv  joint_pos.csv  joint_vel.csv
gear_sonic_deploy/reference/example/macarena_001__A545/: body_ang_vel.csv  body_lin_vel.csv  body_pos.csv  body_quat.csv  joint_pos.csv  joint_vel.csv
gear_sonic_deploy/reference/example/macarena_001__A545_M/: body_ang_vel.csv  body_lin_vel.csv  body_pos.csv  body_quat.csv  joint_pos.csv  joint_vel.csv
gear_sonic_deploy/reference/example/neutral_kick_R_001__A543/: body_ang_vel.csv  body_lin_vel.csv  body_pos.csv  body_quat.csv  joint_pos.csv  joint_vel.csv
gear_sonic_deploy/reference/example/neutral_kick_R_001__A543_M/: body_ang_vel.csv  body_lin_vel.csv  body_pos.csv  body_quat.csv  joint_pos.csv  joint_vel.csv
gear_sonic_deploy/reference/example/squat_001__A359/: body_ang_vel.csv  body_lin_vel.csv  body_pos.csv  body_quat.csv  joint_pos.csv  joint_vel.csv
gear_sonic_deploy/reference/example/tired_forward_lunge_R_001__A359_M/: body_ang_vel.csv  body_lin_vel.csv  body_pos.csv  body_quat.csv  joint_pos.csv  joint_vel.csv
gear_sonic_deploy/reference/example/tired_one_leg_jumping_R_001__A359/: body_ang_vel.csv  body_lin_vel.csv  body_pos.csv  body_quat.csv  joint_pos.csv  joint_vel.csv
gear_sonic_deploy/reference/example/tired_one_leg_jumping_R_001__A359_M/: body_ang_vel.csv  body_lin_vel.csv  body_pos.csv  body_quat.csv  joint_pos.csv  joint_vel.csv
gear_sonic_deploy/reference/example/walking_quip_360_R_002__A428/: body_ang_vel.csv  body_lin_vel.csv  body_pos.csv  body_quat.csv  joint_pos.csv  joint_vel.csv
gear_sonic_deploy/src/g1/g1_deploy_onnx_ref/: CMakeLists.txt
gear_sonic_deploy/src/g1/g1_deploy_onnx_ref/cmake/: ROS2.cmake
gear_sonic_deploy/src/g1/g1_deploy_onnx_ref/config/: motion_catalog.example.yaml
gear_sonic_deploy/src/g1/g1_deploy_onnx_ref/include/: foot_trajectory_event.hpp  motion_catalog.hpp  motion_data_reader.hpp
gear_sonic_deploy/src/g1/g1_deploy_onnx_ref/include/command_interface/: ros2_command_handler.hpp
gear_sonic_deploy/src/g1/g1_deploy_onnx_ref/include/input_interface/: gamepad.hpp  gamepad_manager.hpp  input_interface.hpp  keyboard_handler.hpp  zmq_endpoint_interface.hpp
gear_sonic_deploy/src/g1/g1_deploy_onnx_ref/src/: g1_deploy_onnx_ref.cpp
gear_sonic_deploy/web_manager/: README.md  pyproject.toml  server.py
gear_sonic_deploy/web_manager/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
gear_sonic_deploy/web_manager/static/: index.html
graphify-out/: .graphify_detect.json  .graphify_labels.json  .graphify_python  .graphify_root  .vocab.txt  GRAPH_REPORT.md  cost.json  manifest.json
graphify-out/2026-07-10/: .graphify_labels.json  GRAPH_REPORT.md  manifest.json
graphify-out/cache/: stat-index.json
install_scripts/: install_gear_sonic_models_offline.sh  package_gear_sonic_models.sh
scripts/: convert_qt_bvh_to_soma_compatible_bvh.py
(+26 files in other folders)
